# finance_manager

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
core/: basescraper.py
flows/: deploy_flows.py  entrypoints_config.py
flows/bank_scrapers/: otsar_hahayal_flow.py
flows/collection/: isracard_flow.py  otsar_hahayal_flow.py
flows/common/tasks/: mongo_task.py  mysql_task.py  transform_task.py
flows/credit_scrapers/: isracard_flow.py
flows/dataplatform/: deploy_utils.py
flows/dataplatform/blocks/: __init__.py
flows/dataplatform/utils/: create_blocks.py
flows/deployments/: backfill_isracard.yaml  scrape_isracard_eden_daily.yaml  scrape_isracard_noam_daily.yaml  scrape_otsar_hahayal_daily.yaml
flows/notification/: riseup_telegram_flow.py
flows/prediction/: transaction_category_serving_flow.py  transaction_category_training_flow.py
interface/scrapers/: isracard_scarper.py
mysql_dbt/models/: sources.yml
mysql_dbt/models/weekly_expenses_report/: int_daily_expenses.sql  int_first_day_of_month.sql  int_mtd_expenses.sql  mart_mtd_expenses.sql  stg_expense_transaction.sql
src/core/: common.py  constants.py
src/core/collection/: model.py
src/interface/: __init__.py
tests/data/: mock_category_catbst_training_sample.json  mock_preprocessed_train_data.csv  mock_raw_train_data.csv
tests/flow/: test_isracard_flow.py  test_otsar_flow.py
tests/mock/: otsar_data.json
tests/models/: test_catboost_model.py
tests/scrapers/: test_isracard_scraper.py
tests/task/: test_transform_task.py
(+38 files in other folders)
