[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["noam.cohen <noam.cohen@explorium.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.3"
pandas = "^1.4.2"
prefect = ">=2.0b"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
